limpieza de codigo